[package]
name = "claude-history-cleaner"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to manage and clean Claude Code conversation history"
license = "MIT"
repository = "https://github.com/mq-loser/claude-history-cleaner"
keywords = ["claude", "cli", "history", "cleaner"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
colored = "3"

[[bin]]
name = "chc"
path = "src/main.rs"
